--- a/Empresa.ProdutoNomeAplicacaoTesteASPNETMVC.Web/Empresa.ProdutoNomeAplicacaoTesteASPNETMVC.Web.csproj
+++ b/Empresa.ProdutoNomeAplicacaoTesteASPNETMVC.Web/Empresa.ProdutoNomeAplicacaoTesteASPNETMVC.Web.csproj
@@ -120,6 +120,7 @@
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Controllers\FrasesController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\TesteController.cs" />
     <Compile Include="Global.asax.cs">
@@ -179,6 +180,9 @@
     <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Teste\Index.cshtml" />
+    <Content Include="Views\Frases\Index.cshtml" />
+    <Content Include="Views\Teste\Saudacao.cshtml" />
+    <Content Include="Views\Frases\Confirmacao.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
